# person_tracking

./: README.md  pyproject.toml  requirements.txt
person_tracking/: infer.py  track_person.py
